[package]
name = "veranda"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A rand RNG source for vexide."
keywords = ["vexide", "rand", "random", "vex", "v5"]
categories = ["no-std", "science::robotics"]
repository = "https://github.com/Gavin-Niederman/veranda"

[package.metadata.docs.rs]
targets = ["armv7a-none-eabi"]

[dependencies]
ahash = { version = "0.8.11", default-features = false }
rand = { version = "0.8.5", default-features = false }
vex-sdk = "0.24.1"
vexide-core = "0.5.0-rc.2"
vexide-devices = "0.5.0-rc.2"

[dev-dependencies]
vexide = "0.5.0-rc.2"
