[package]
name = "veranda"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "A rand RNG source for vexide."
keywords = ["vexide", "rand", "random", "vex", "v5"]
categories = ["no-std", "science::robotics"]
repository = "https://github.com/Gavin-Niederman/veranda"

[package.metadata.docs.rs]
targets = ["armv7a-none-eabi"]

[dependencies]
ahash = { version = "0.8.11", default-features = false }
rand = { version = "0.9.0", default-features = false }
vex-sdk = "0.26.0"
vexide-core = { version = "0.7.0", default-features = false }
vexide-devices = "0.7.0"

[dev-dependencies]
vexide = "0.7.0"
